scripts/tests/errors/err_undefined_method.bu
// Test: undefined method on class instance
// Expected: runtime error "Undefined method"

class Foo {
    def init() {}
}

var f = Foo();
f.nonexistent_method();
